# matching-engine

./: CMakeLists.txt  LICENSE  README.md  cases.txt
docs/: classes.puml
include/crow/: crow_all.h
include/orderbook/: types.hpp
include/orderbook/api/: modify_order_request.hpp  new_order_request.hpp
include/orderbook/core/: matching_engine.hpp  order.hpp  order_book.hpp  order_book_side.hpp  price_level.hpp  trade.hpp
include/orderbook/report/: i_trade_repository.hpp  internal_trade_repository.hpp  price_report.hpp  report_service.hpp  volume_report.hpp
include/orderbook/util/: i_clock.hpp  id_generator.hpp  simulated_clock.hpp  system_clock.hpp  timestamp.hpp
src/core/: matching_engine.cpp  order.cpp  order_book.cpp  order_book_side.cpp  price_level.cpp  trade.cpp
src/examples/: multithread_test.cpp
src/examples/web_demo/: main.cpp
src/report/: internal_trade_repository.cpp  price_report.cpp  report_service.cpp  volume_report.cpp
src/util/: i_clock.cpp  id_generator.cpp  simulated_clock.cpp  system_clock.cpp  timestamp.cpp
static/: app.js  index.html  style.css
